--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         게시판 보기 페이지 : <a href="html/boardView.html">GO</a><br />
         게시판 작성 페이지 : <a href="html/boardWrite.html">GO</a><br />
         게시판 수정 페이지 : <a href="html/boardModify.html">GO</a><br />
-        게시판 검색 페이지 : <a href="html/boardSearch.html">GO</a>
+        게시판 검색 페이지 : <a href="html/boardSearch.html">GO</a><br />
 
         <br /><br />
 
@@ -36,6 +36,7 @@
         게시판 수정 페이지 : <a href="board/boardModify.php">GO</a><br />
         <br /><br />
         <h2>테이블 만들기</h2>
+        <br />
         myMember 테이블 만들기 : <a href="create/createMember.php">GO</a><br />
         myBoard 테이블 만들기 : <a href="create/createBoard.php">GO</a> <br />myBoard 테이블 데이터
         만들기 : <a href="create/createBoardData.php">GO</a>
