--- a/index.html
+++ b/index.html
@@ -38,7 +38,13 @@
         <h2>테이블 만들기</h2>
         <br />
         myMember 테이블 만들기 : <a href="create/createMember.php">GO</a><br />
-        myBoard 테이블 만들기 : <a href="create/createBoard.php">GO</a> <br />myBoard 테이블 데이터
-        만들기 : <a href="create/createBoardData.php">GO</a>
+        myBoard 테이블 만들기 : <a href="create/createBoard.php">GO</a> <br />
+        myBoard 테이블 데이터 만들기 : <a href="create/createBoardData.php">GO</a><br />
+        myAdminMember 테이블 만들기 : <a href="create/createAdminMember.php">GO</a><br />
+        myBlog 테이블 만들기 : <a href="create/createBlog.php">GO</a><br />
+        <br /><br />
+        <h2>관리자 페이지</h2>
+        <br />
+        관리자 회원가입 : <a href="admin/adminJoin.php">GO</a>
     </body>
 </html>
