--- a/index.html
+++ b/index.html
@@ -35,6 +35,11 @@
         게시판 작성 페이지 : <a href="board/boardWrite.php">GO</a><br />
         게시판 수정 페이지 : <a href="board/boardModify.php">GO</a><br />
         <br /><br />
+
+        <h2>BLOG</h2><br>
+        블로그 페이지 : <a href="blog/blog.php">GO</a><br>
+        블로그 글쓰기 페이지 : <a href="blog/blogWrite.php">GO</a><br>
+        <br><br>
         <h2>테이블 만들기</h2>
         <br />
         myMember 테이블 만들기 : <a href="create/createMember.php">GO</a><br />
@@ -42,6 +47,7 @@
         myBoard 테이블 데이터 만들기 : <a href="create/createBoardData.php">GO</a><br />
         myAdminMember 테이블 만들기 : <a href="create/createAdminMember.php">GO</a><br />
         myBlog 테이블 만들기 : <a href="create/createBlog.php">GO</a><br />
+        myComment 테이블 만들기 : <a href="create/createComment.php">GO</a><br />
         <br /><br />
         <h2>관리자 페이지</h2>
         <br />
